bug fixing in logical plan. added datalog jar to lib. added examples that are evaluated on cluster.